Bug 376044 - Selecting credit card account from ledger dropdown does not update transaction pane
Summary: Selecting credit card account from ledger dropdown does not update transactio...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-05 12:43 UTC by Ian Neal
Modified: 2018-03-28 07:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Neal 2017-02-05 12:43:36 UTC
STR
1/ Using latest git master
2/ Go to ledger and select a cash/savings account
3/ Check transaction pane shows transactions from selected account
4/ From dropdown select a credit card account
5/ Check transaction pane

Expected Result
1/ Transaction pane shows credit card transactions

Actual Result
1/ Transaction pane still shows transactions from previously selected cash/savings account

Workaround
1/ Go to Institution pane, select credit card account and from context menu select Open Ledger
Comment 1 Jack 2017-02-05 21:09:15 UTC
I can't confirm now, but I do think I've seen this or something like it in the past.  I found a quicker workaround to select a different transaction, and then select the transaction you want.
Comment 2 Thomas Baumgart 2017-02-06 15:18:22 UTC
The ledger code will eventually be replaced by the new version (which you can see already at the bottom of the view list on the left hand side of the application). It is not yet fully functional and fully integrated into the application.
Comment 3 wojnilowicz 2017-08-12 10:26:26 UTC
Git commit d4d94908e055f7bf5ee937de85e44f930163fd9b by Łukasz Wojniłowicz.
Committed on 12/08/2017 at 09:42.
Pushed by wojnilowicz into branch 'master'.

Search whole model in KMyMoneyAccountCombo::setSelected
FIXED-IN:5.0

M  +3    -2    kmymoney/widgets/kmymoneyaccountcombo.cpp

https://commits.kde.org/kmymoney/d4d94908e055f7bf5ee937de85e44f930163fd9b