Search whole model in KMyMoneyAccountCombo::setSelected

BUG:376044
FIXED-IN:5.0